Fixed #34: Collapsing sidebar bug

--- a/code/css-snippets/collapsing-sidebar.css
+++ b/code/css-snippets/collapsing-sidebar.css
@@ -2,11 +2,25 @@
 /* author: https://github.com/kmaasrud */
 /* source: https://github.com/kmaasrud/awesome-obsidian */
 
+.workspace {
+  position: relative;
+}
+
+.side-dock-ribbon.mod-left.is-collapsed,
+.side-dock-ribbon.mod-right.is-collapsed {
+  height: 100%;
+}
+
 .side-dock-ribbon.mod-left.is-collapsed:not(:hover),
 .side-dock-ribbon.mod-right.is-collapsed:not(:hover) {
-  width: 15px !important;
+  position: absolute;
   opacity: 0;
 }
-.side-dock-ribbon {
-  transition-property: width, opacity;
+
+.side-dock-ribbon.mod-left.is-collapsed:not(:hover) {
+  left: 0;
+}
+
+.side-dock-ribbon.mod-right.is-collapsed:not(:hover) {
+  right: 0;
 }
